<resources>
    <string name="app_name">Aqua Reef</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="templates">Şablonlar</string>
    <string name="kaydet">Kaydet</string>
    <string name="g_nder">Gönder</string>
    <string name="ba_lang_zaman">Başlangıç Zamanı</string>
    <string name="cikis_zaman">Çıkış Zamanı</string>
    <string name="inis_zaman">İniş Zamanı</string>
    <string name="bitis_zaman">Bitiş Zamanı</string>
    <string name="parlaklik">Parlaklık</string>
    <string name="eski">-</string>
    <string name="arti">+</string>
    <string name="royalBlue">Koyu Mavi</string>
    <string name="mavi">Mavi</string>
    <string name="ay_dongusu">Ay Döngüsü</string>
    <string name="iptal">İptal</string>
    <string name="tamam">Tamam</string>
    <string name="gonder">Gönder</string>
    <string name="varsayilan">Varsayılan</string>
    <string name="kaydedilenler">Kaydedilenler</string>
    <string name="paylas">Paylaş</string>
    <string name="user_nick">Kullanıcı Adi</string>
    <string name="user_not">Kullanıcı Notu</string>
    <string name="cihazlar">Cihazlar</string>
    <string name="agdakiler">Ağdakiler</string>
    <string name="gun_efekti">Gün Efekti</string>
    <string name="simsek_efekti">Şimşek Efekti</string>
    <string name="bulut_efekti">Bulut Efekti</string>
    <string name="disko_efekti">Disko Efekti</string>
    <string name="favorites">Favorites</string>
    <string name="manual">Manuel</string>
    <string name="auto">Otomatik</string>
    <string name="k_rm_z_660nm">Kırmızı(660nm)</string>
    <string name="ye_il_530nm">Yeşil(530nm)</string>
    <string name="beyaz">Beyaz</string>
    <string name="gunisigi">Gün Işığı</string>
    <string name="uv">UV</string>
    <string name="cihazdan_al">Cihazdan Al</string>
    <string name="g_n_similasyon_saati_leri_al">Gün Similasyon Saati İleri Al</string>
    <string name="saat">Saat:</string>
    <string name="saat_bilgisi_g_nder">Saat Bilgisi Gönder</string>
    <string name="akvaryum_sistem_saatini_g_ncelle">Akvaryum Sistem Saatini Güncelle</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="aquareef_sat_n_al">AquaReef Satın Al</string>
    <string name="time">time</string>
    <string name="farkli_kaydet">Farklı Kaydet</string>
    <string name="default_yap">Varsayılan Yap</string>
    <string name="secenekler">Seçenekler</string>
    <string name="lutfen_isim_girin">Lütfen bir isim giriniz.</string>
    <string name="acik">Açık</string>
    <string name="kapali">Kapalı</string>
    <string name="emin_misiniz">Emin misiniz?</string>
    <string name="akvaryumlarim">Akvaryumlarım</string>
    <string name="akvaryum_ekle">Akvaryum Ekle</string>
    <string name="ip">IP</string>
    <string name="bu_isimde_grup_mevcut">Bu isimde bir grup mevcut</string>
    <string name="ad">Ad</string>
    <string name="acikilama">Açıklama</string>
    <string name="efektler">Efektler</string>
    <string name="favori">Favori</string>
    <string name="favori_kayit">Lütfen favori ayarınıza bir isim verin</string>
    <string name="schedule">Gün Similasyonu</string>
    <string name="kirmizi">Kırmızı</string>
    <string name="yesil">Yeşil</string>
    <string name="r_blue">K.Mavi</string>
    <string name="moon">Ay</string>
    <string name="saat_tipi">sa</string>
    <string name="yuklendi">Yüklendi</string>
    <string name="islem_basarisiz">İşlem Başarısız</string>
    <string name="islem_basarili">İşlem Başarılı</string>
    <string name="aqulink">Aqualink</string>
    <string name="cihazdan_gelen">Cihazdan Gelen</string>
    <string name="mytemplates">Şablonlarım</string>
    <string name="gonderiliyor">Gönderiliyor</string>
    <string name="sifir">0</string>

</resources>
