<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Fragment.ScheduleFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="clip_horizontal"
            android:orientation="vertical"
            android:padding="2dp">


            <TextView
                android:id="@+id/schedule_txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold" />

            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/btn_default_load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/varsayilan"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/toggleGroupOne"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/toggle_out_line_light"
                android:divider="@drawable/toggle_divider_light"
                android:orientation="horizontal"
                android:showDividers="middle"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp">

                <RadioButton
                    android:id="@+id/redToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_background_light"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/kirmizi" />

                <RadioButton
                    android:id="@+id/greenToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_background_light"
                    android:button="@null"
                    android:gravity="center"

                    android:text="@string/yesil" />

                <RadioButton
                    android:id="@+id/royalBToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_background_light"
                    android:button="@null"
                    android:gravity="center"

                    android:text="@string/royalBlue" />

                <RadioButton
                    android:id="@+id/blueToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_background_light"
                    android:button="@null"

                    android:gravity="center"
                    android:text="@string/mavi" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/toggleGroupTwo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/toggle_out_line_light"
                android:divider="@drawable/toggle_divider_light"
                android:orientation="horizontal"
                android:showDividers="middle"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp">

                <RadioButton
                    android:id="@+id/whiteToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_background_light"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/beyaz" />

                <RadioButton
                    android:id="@+id/dWhiteToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_background_light"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/gunisigi" />

                <RadioButton
                    android:id="@+id/UVToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_background_light"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/uv" />

                <RadioButton
                    android:id="@+id/moonToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_background_light"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/moon" />
            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/holo_blue_dark"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/schedule_txt_shared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/paylas"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/schedule_txt_takedevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cihazdan_al"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <Button
            android:id="@+id/schedule_btnAll"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_menu_send" />

    </LinearLayout>

</FrameLayout>
