<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Fragment.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/schedule_txt_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/gray_very_light"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="5dp"
            android:text="@string/g_n_similasyon_saati_leri_al"
            android:textAlignment="textStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/saat"
            android:textStyle="bold" />

        <belka.us.androidtoggleswitch.widgets.ToggleSwitch
            android:id="@+id/settings_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp"
            android:textSize="10sp"
            custom:activeBgColor="@android:color/black"
            custom:activeTextColor="@android:color/white"
            custom:cornerRadius="7dp"
            custom:inactiveBgColor="@android:color/darker_gray"
            custom:inactiveTextColor="@android:color/black"
            custom:separatorColor="@android:color/black"
            custom:toggleWidth="50dp">

        </belka.us.androidtoggleswitch.widgets.ToggleSwitch>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/saat_bilgisi_g_nder" />

            <Button
                android:id="@+id/settings_btn_clock"
                android:layout_width="103dp"
                android:layout_height="22dp"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/gonder"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/gray_very_light"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="5dp"
            android:text="@string/akvaryum_sistem_saatini_g_ncelle"
            android:textAlignment="textStart"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextClock
                android:id="@+id/textClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:format12Hour="dd-MM-yyyy HH:mm:ss"
                android:format24Hour="dd-MM-yyyy HH:mm:ss" />

            <Button
                android:id="@+id/settings_btn_time"
                android:layout_width="103dp"
                android:layout_height="22dp"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/gonder"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/gray_very_light"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="5dp"
            android:text="@string/ayarlar"
            android:textAlignment="textStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_txt_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/aquareef_sat_n_al"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>
